--- a/src/weather_fetcher.ipynb
+++ b/src/weather_fetcher.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(\"hi\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dbutils.widgets.text(\"catalog\", \"hive_metastore\", \"Catalog Name\")\n",
     "dbutils.widgets.text(\"schema\", \"dev\", \"Schema Name\")\n",
     "\n",
